# gnm

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
cmake/: AndroidNdkParseVersion.cmake  android.toolchain.cmake  clang-cl.cmake  llvm_clang_cl.cmake
gnm/: CMakeLists.txt  common.h  gnm.h  mat2x2.h  mat2x3.h  mat2x4.h  mat3x2.h  mat3x3.h  mat3x4.h  mat4x2.h  mat4x3.h  mat4x4.h  quat.h  stub.cc  vec2.h  vec3.h  vec4.h
gnm/functions/: func_common.h  func_common.inl  func_exponential.h  func_exponential.inl  func_geometric.h  func_geometric.inl  func_integer.h  func_integer.inl  func_matrix.h  func_matrix.inl  func_pack_unpack.h  func_pack_unpack.inl  func_quat.h  func_quat.inl  func_trigonometric.h  func_trigonometric.inl  func_vector_relational.h  func_vector_relational.inl
gnm/operators/: mat2x2_operators.h  mat2x2_operators.inl  mat2x3_operators.h  mat2x3_operators.inl  mat2x4_operators.h  mat2x4_operators.inl  mat3x2_operators.h  mat3x2_operators.inl  mat3x3_operators.h  mat3x3_operators.inl  mat3x4_operators.h  mat3x4_operators.inl  mat4x2_operators.h  mat4x2_operators.inl  mat4x3_operators.h  mat4x3_operators.inl  mat4x4_operators.h  mat4x4_operators.inl  quat_operators.h  quat_operators.inl  vec2_operators.h  vec2_operators.inl  vec3_operators.h  vec3_operators.inl  vec4_operators.h  vec4_operators.inl
gnm/swizzles/: quat_swizzles.h  swizzles.h  vec2_swizzles.h  vec3_swizzles.h  vec4_swizzles.h
gnm/types/: mat2x2_type.h  mat2x3_type.h  mat2x4_type.h  mat3x2_type.h  mat3x3_type.h  mat3x4_type.h  mat4x2_type.h  mat4x3_type.h  mat4x4_type.h  quat_type.h  vec2_type.h  vec3_type.h  vec4_type.h
test/test/: CMakeLists.txt  main.cc
